--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center h-screen">
+<div class="flex justify-center items-center h-screen p-4">
     <form class="w-full max-w-sm" (ngSubmit)="onSubmit()">
         <h2 class="text-center text-2xl mb-4">Reset Password</h2>
         <div class="mb-4">
