chore: Update routing configuration and add wildcard redirect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="grid grid-rows-layout min-h-screen">
+    <app-navbar></app-navbar>
+    <div class="flex-grow w-full px-4 sm:px-6 lg:px-8">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer class="w-full mt-auto"></app-footer>
+</div>
