--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,9 +1,15 @@
 <div class="flex justify-center items-center p-4">
-    <form class="w-full max-w-sm" (ngSubmit)="onSubmit()">
+    <form class="w-full max-w-sm" [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
         <h2 class="text-center text-2xl mb-4">Forgot Password</h2>
         <div class="mb-4">
             <label for="email" class="block text-sm font-bold mb-2">Email</label>
-            <input id="email" type="email" class="w-full px-3 py-2 border rounded" [(ngModel)]="email" name="email">
+            <div class="relative">
+                <input id="email" type="email" class="w-full px-3 py-2 border rounded" formControlName="email"
+                    name="email">
+            </div>
+            @if ( email?.invalid && email?.touched) {
+            <div class="text-red-500 text-sm mt-1">Email is required</div>
+            }
         </div>
         <div class="flex items-center justify-between">
             <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded">Submit</button>
