--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,15 +1,15 @@
 <div class="flex justify-center items-center p-4">
-    <form class="w-full max-w-sm" (ngSubmit)="onSubmit()">
+    <form class="w-full max-w-sm" [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
         <h2 class="text-center text-2xl mb-4">Reset Password</h2>
         <div class="mb-4">
             <label for="password" class="block text-sm font-bold mb-2">New Password</label>
-            <input id="password" type="password" class="w-full px-3 py-2 border rounded" [(ngModel)]="password"
+            <input id="password" type="password" class="w-full px-3 py-2 border rounded" formControlName="password"
                 name="password">
         </div>
         <div class="mb-4">
             <label for="confirmPassword" class="block text-sm font-bold mb-2">Confirm Password</label>
             <input id="confirmPassword" type="password" class="w-full px-3 py-2 border rounded"
-                [(ngModel)]="confirmPassword" name="confirmPassword">
+                formControlName="confirmPassword" name="confirmPassword">
         </div>
         <div class="flex items-center justify-between">
             <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded">Submit</button>
