--- a/src/app/expenses/add-expense/add-expense.component.html
+++ b/src/app/expenses/add-expense/add-expense.component.html
@@ -1,26 +1,46 @@
 <div class="flex justify-center items-center p-4">
-    <form class="w-full max-w-sm" (ngSubmit)="onSubmit()">
+    <form class="w-full max-w-sm" [formGroup]="expenseForm" (ngSubmit)="onSubmit()">
         <h2 class="text-center text-2xl mb-4">Add Expense</h2>
         <div class="mb-4">
             <label for="description" class="block text-sm font-bold mb-2">Description</label>
-            <input id="description" type="text" class="w-full px-3 py-2 border rounded" [(ngModel)]="description"
-                name="description">
+            <div class="relative">
+                <input id="description" type="text" class="w-full px-3 py-2 border rounded"
+                    formControlName="description" name="description">
+            </div>
+            <div class="text-red-500 text-xs mt-1">
+                @if (description?.invalid && description?.touched) {
+                @if (description?.errors?.['required']) {
+                <div class="text-red-500 text-xs mt-1">Description is required</div>
+                }
+                @if (description?.errors?.['minlength']) {
+                <div class="text-red-500 text-xs mt-1">Description must be at least 3 characters</div>
+                }
+                }
+            </div>
         </div>
         <div class="mb-4">
             <label for="amount" class="block text-sm font-bold mb-2">Amount</label>
-            <input id="amount" type="number" class="w-full px-3 py-2 border rounded" [(ngModel)]="amount" name="amount" min="0">
+            <div class="relative">
+                <input id="amount" type="number" class="w-full px-3 py-2 border rounded" formControlName="amount"
+                    name="amount">
+            </div>
+            <div class="text-red-500 text-xs mt-1">
+                @if (amount?.invalid && amount?.touched) {
+                <div class="text-red-500 text-xs mt-1">Amount is required</div>
+                }
+            </div>
         </div>
         <div class="mb-4">
             <label for="category" class="block text-sm font-bold mb-2">Category</label>
-            <select id="category" class="w-full px-3 py-2 border rounded" [(ngModel)]="category" name="category">
+            <select id="category" class="w-full px-3 py-2 border rounded" formControlName="category" name="category">
                 @for (cat of categories; track $index) {
-                    <option [value]="cat">{{ cat }}</option>
+                <option [value]="cat">{{ cat }}</option>
                 }
             </select>
         </div>
         <div class="mb-4">
             <label for="date" class="block text-sm font-bold mb-2">Date</label>
-            <input id="date" type="date" class="w-full px-3 py-2 border rounded" [(ngModel)]="date" name="date">
+            <input id="date" type="date" class="w-full px-3 py-2 border rounded" formControlName="date" name="date">
         </div>
         <div class="flex items-center justify-between">
             <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded">Add Expense</button>
