--- a/src/app/expenses/edit-expense/edit-expense.component.html
+++ b/src/app/expenses/edit-expense/edit-expense.component.html
@@ -1,19 +1,19 @@
 <div class="flex justify-center items-center p-4">
-    <form class="w-full max-w-sm" (ngSubmit)="onSubmit()">
+    <form class="w-full max-w-sm" [formGroup]="expenseForm" (ngSubmit)="onSubmit()">
         <h2 class="text-center text-2xl mb-4">Edit Expense</h2>
         <div class="mb-4">
             <label for="description" class="block text-sm font-bold mb-2">Description</label>
             <input id="description" type="text" class="w-full px-3 py-2 border rounded"
-                [(ngModel)]="expense.description" name="description">
+                formControlName="description" name="description">
         </div>
         <div class="mb-4">
             <label for="amount" class="block text-sm font-bold mb-2">Amount</label>
-            <input id="amount" type="number" class="w-full px-3 py-2 border rounded" [(ngModel)]="expense.amount"
+            <input id="amount" type="number" class="w-full px-3 py-2 border rounded" formControlName="amount"
                 name="amount">
         </div>
         <div class="mb-4">
             <label for="category" class="block text-sm font-bold mb-2">Category</label>
-            <select id="category" class="w-full px-3 py-2 border rounded" [(ngModel)]="expense.category"
+            <select id="category" class="w-full px-3 py-2 border rounded" formControlName="category"
                 name="category">
                 @for (cat of categories; track $index) {
                 <option [value]="cat">{{ cat }}</option>
@@ -22,7 +22,8 @@
         </div>
         <div class="mb-4">
             <label for="date" class="block text-sm font-bold mb-2">Date</label>
-            <input id="date" type="date" class="w-full px-3 py-2 border rounded" [(ngModel)]="expense.date" name="date">
+            <input id="date" type="date" class="w-full px-3 py-2 border rounded" formControlName="date"
+                name="date">
         </div>
         <div class="flex items-center justify-between">
             <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded">Update Expense</button>
