--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="flex justify-center items-center p-4">
     <form class="w-full max-w-sm" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <h2 class="text-center text-2xl mb-4">Login</h2>
-        @if (error) {
+        @if (error()) {
         <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 mb-4" role="alert">
-            <p>{{ error }}</p>
+            <p>{{ error() }}</p>
         </div>
         }
         <div class="mb-4">
@@ -30,11 +30,11 @@
         <div class="mb-4">
             <label for="password" class="block text-sm font-bold mb-2">Password</label>
             <div class="relative">
-                <input [type]="showPassword ? 'text' : 'password'" id="password" class="w-full px-3 py-2 border rounded"
+                <input [type]="showPassword() ? 'text' : 'password'" id="password" class="w-full px-3 py-2 border rounded"
                     formControlName="password">
                 <button type="button" class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5"
                     (click)="togglePasswordVisibility()">
-                    <span [ngClass]="showPassword ? 'fa-solid fa-eye-slash' : 'fa-solid fa-eye'"></span>
+                    <span [ngClass]="showPassword() ? 'fa-solid fa-eye-slash' : 'fa-solid fa-eye'"></span>
                 </button>
             </div>
             <div class="text-sm mt-1">
