--- a/src/app/expenses/list-expenses/list-expenses.component.html
+++ b/src/app/expenses/list-expenses/list-expenses.component.html
@@ -17,20 +17,20 @@
             <label for="startDate" class="block text-sm font-bold mb-2">Start Date</label>
             <input id="startDate" type="date" class="w-full px-3 py-2 border rounded" formControlName="startDate"
                 (change)="onStartDateChange()">
-            @if (filter() === 'custom' && (submitted() || (filterForm.controls['startDate'].errors?.['required'] && filterForm.controls['startDate'].touched))) {
+            @if (filter() === 'custom' && (filterForm.controls['startDate'].errors?.['required'] && filterForm.controls['startDate'].touched)) {
             <div class="text-red-500 text-sm">Start Date is required</div>
             }
             <label for="endDate" class="block text-sm font-bold mb-2 mt-2">End Date</label>
             <input id="endDate" type="date" class="w-full px-3 py-2 border rounded" formControlName="endDate"
                 [min]="minDate()">
-            @if (filter() === 'custom' && (submitted() || (filterForm.controls['endDate'].errors?.['required'] && filterForm.controls['endDate'].touched))) {
+            @if (filter() === 'custom' && (filterForm.controls['endDate'].errors?.['required'] && filterForm.controls['endDate'].touched)) {
             <div class="text-red-500 text-sm">End Date is required</div>
             }
             <button class="bg-blue-500 text-white py-2 px-4 rounded mt-2" (click)="applyCustomFilter()">Apply</button>
         </div>
         }
     </form>
-    @if (isLoading()){
+    @if (isLoading() && !errorMsg() ) {
     <p class="text-center text-gray-500">Loading...</p>
     }
     @else if(errorMsg() && !isLoading()) {
