--- a/src/app/expenses/add-expense/add-expense.component.html
+++ b/src/app/expenses/add-expense/add-expense.component.html
@@ -24,7 +24,7 @@
         <div class="mb-4">
             <label for="amount" class="block text-sm font-bold mb-2">Amount</label>
             <div class="relative">
-                <input id="amount" type="number" class="w-full px-3 py-2 border rounded" formControlName="amount"
+                <input id="amount" type="number" class="w-full px-3 py-2 border rounded" formControlName="amount" min="0"
                     name="amount">
             </div>
             <div class="text-red-500 text-xs mt-1">
