feat: Update total expenses calculation for all-time and filtered expenses

--- a/src/app/expenses/list-expenses/list-expenses.component.html
+++ b/src/app/expenses/list-expenses/list-expenses.component.html
@@ -9,6 +9,7 @@
                 <option value="week">Past Week</option>
                 <option value="month">Last Month</option>
                 <option value="3months">Last 3 Months</option>
+                <option value="6months">Last 6 Months</option>
                 <option value="custom">Custom</option>
             </select>
         </div>
