--- a/src/app/expenses/list-expenses/list-expenses.component.html
+++ b/src/app/expenses/list-expenses/list-expenses.component.html
@@ -42,7 +42,6 @@
     <p class="text-center text-red-500">{{ errorMsg() }}</p>
     }
     @else if (expenses() && !isLoading() && !errorMsg()) {
-    @if(expenses().length > 0) {
     <ul>
         @for (expense of expenses(); track $index) {
         <li class="border-b py-2">
@@ -66,7 +65,6 @@
         <p class="text-lg font-bold">Total Amount: <i class="fa-solid fa-indian-rupee-sign"></i>{{ totalAmount() }}</p>
     </div>
     }
-    }
 </div>
 
 @if (showConfirmDialog()) {
@@ -88,3 +86,5 @@
     </div>
 </div>
 }
+
+<p-toast position="top-right"></p-toast>
